--- a/ai-project-ui/src/app/modulos/canchas/admin-canchas.component.html
+++ b/ai-project-ui/src/app/modulos/canchas/admin-canchas.component.html
@@ -1,6 +1,7 @@
 <h2>Administración de Canchas</h2>
 <p>Aquí podrás crear, editar y eliminar canchas.</p>
 <app-list
-	[columns]="columns"
-	[data]="data"
+	[columns]="this.columns"
+	[data]="this.data"
+	[totalItems]="this.totalCount"
 ></app-list>
