--- a/ai-project-ui/src/app/components/list/list.component.html
+++ b/ai-project-ui/src/app/components/list/list.component.html
@@ -7,7 +7,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr *ngFor="let row of pagedData">
+		<tr *ngFor="let row of data | async">
 			<td *ngFor="let col of columns">
 				{{ row[col.property] }}
 			</td>
@@ -69,7 +69,9 @@
 			>
 				<div class="list-pagination-footer">
 					<div class="footer-left">
-						<span class="total-items">Total: {{ totalItems }}</span>
+						<span class="total-items"
+							>Total: {{ (totalItems | async) ?? 0 }}</span
+						>
 					</div>
 					<div class="footer-right">
 						<select
@@ -90,10 +92,13 @@
 						>
 							&lt;
 						</button>
-						<span>Página {{ pageIndex + 1 }} de {{ totalPages }}</span>
+						<span
+							>Página {{ pageIndex + 1 }} de
+							{{ (totalPages | async) ?? 1 }}</span
+						>
 						<button
 							(click)="onPageChange(1)"
-							[disabled]="pageIndex + 1 >= totalPages"
+							[disabled]="pageIndex + 1 >= ((totalPages | async) ?? 1)"
 						>
 							&gt;
 						</button>
