--- a/ai-project-ui/src/app/components/list/list.component.html
+++ b/ai-project-ui/src/app/components/list/list.component.html
@@ -1,4 +1,4 @@
-<table class="app-list-table">
+<table [id]="this.listId" class="app-list-table">
 	<thead>
 		<tr>
 			<th
@@ -83,8 +83,8 @@
 					</div>
 					<div class="footer-right">
 						<select
-							[value]="pageSize"
-							(change)="onPageSizeChange($event)"
+							[ngModel]="pageSize"
+							(ngModelChange)="onPageSizeChange($event)"
 						>
 							<option
 								*ngFor="let size of pageSizeOptions"
