--- a/ai-project-ui/src/app/components/buttons/button.component.scss
+++ b/ai-project-ui/src/app/components/buttons/button.component.scss
@@ -62,7 +62,7 @@ button:hover:not(:disabled) {
 	color: var(--color-text);
 	border: none;
 	border-radius: 0.7rem;
-	padding: 0.5rem 1.2rem;
+	padding: clamp(0.5rem, 1.5vw, 0.7rem) clamp(0.7rem, 3vw, 1.6rem);
 	cursor: pointer;
 	display: flex;
 	align-items: center;
