--- a/ai-project-ui/src/app/modulos/canchas/admin-canchas.component.html
+++ b/ai-project-ui/src/app/modulos/canchas/admin-canchas.component.html
@@ -1,14 +1,16 @@
 <h2>Administración de Canchas</h2>
 <p>Aquí podrás crear, editar y eliminar canchas.</p>
-<button class="btn btn-primary" (click)="openCreateModal()">Nueva Cancha</button>
+<app-button
+	[button]="this.newButton"
+	(buttonClick)="openCreateModal()"
+/>
 
 <app-crear-cancha-modal
-  [show]="showCreateModal"
-  [tipoSuelos]="tipoSuelos"
-  [form]="createForm"
-  (close)="closeCreateModal()"
-  (cancel)="onCancelCreateCancha()"
-  (save)="onSubmitCreateCancha($event)"
+	[show]="showCreateModal"
+	[tipoSuelos]="tipoSuelos"
+	(close)="closeCreateModal()"
+	(cancel)="onCancelCreateCancha()"
+	(save)="onSubmitCreateCancha($event)"
 ></app-crear-cancha-modal>
 
 <app-list
